--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="text-left">
     <h1 class="display-8">Computer Zone</h1>
 </div>
-<h1>@ViewData["CurrentGenre"]</h1>
+<h1>@(ViewData["CurrentGenre"] ?? "All Products")</h1>
 <div class="product-grid">
 @foreach (var item in Model) {
     <a asp-action="Details" asp-route-id="@item.Id" class="product-card">
