--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,12 @@
 @{
     ViewData["Title"] = "Home";
 }
-
-<div class="text-left">
+<div class="header-container">
     <h1 class="display-8">Computer Zone</h1>
+    <form asp-controller="Home" asp-action="Index" method="get" class="search-form">
+        <input type="text" name="searchString" value="@ViewData["SearchString"]" placeholder="Tên máy" />
+        <input type="submit" value="Search" />
+    </form>
 </div>
 <h1>@(ViewData["CurrentGenre"] ?? "All Products")</h1>
 <div class="product-grid">
