--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -3,22 +3,23 @@
 @{
     ViewData["Title"] = Model.Title;
 }
-
-<div class="details-container">
-    <div class="details-image">
-        <img src="@Model.ImageUrl" alt="@Model.Title" />
-    </div>
-    <div class="details-info">
-        <h1>@Model.Title</h1>
-        <p><strong>Thể loại:</strong> @Model.Genre</p>
-        <p><strong>Giá sản phẩm:</strong> $@Model.Price</p>
-        <p><strong>Thông tin sản phẩm:</strong></p>
-        <p>@Model.Description</p>
-    
-        <!-- Các nút hành động -->
-        <div class="action-buttons">
-            <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-add-to-cart">Add to Cart</a>
-            <a asp-controller="Cart" asp-action="BuyNow" asp-route-id="@Model.Id" asp-route-quantity="1" class="btn btn-buy-now">Buy Now</a>
+<div class="container">
+    <div class="details-container">
+        <div class="details-image">
+            <img src="@Model.ImageUrl" alt="@Model.Title" />
+        </div>
+        <div class="details-info">
+            <h1>@Model.Title</h1>
+            <p><strong>Thể loại:</strong> @Model.Genre</p>
+            <p><strong>Giá sản phẩm:</strong> $@Model.Price</p>
+            <p><strong>Thông tin sản phẩm:</strong></p>
+            <p>@Model.Description</p>
+        
+            <!-- Các nút hành động -->
+            <div class="action-buttons">
+                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-add-to-cart">Add to Cart</a>
+                <a asp-controller="Cart" asp-action="BuyNow" asp-route-id="@Model.Id" asp-route-quantity="1" class="btn btn-buy-now">Buy Now</a>
+            </div>
         </div>
     </div>
 </div>
