--- a/Views/Shared/_Layout_User.cshtml
+++ b/Views/Shared/_Layout_User.cshtml
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Compute Zone</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MvcLaptop.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
+    <link rel="stylesheets" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheets" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheets" href="~/MvcLaptop.styles.css" asp-append-version="true" />
+    <link rel="stylesheets" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheets" href="~/css/theme.css" asp-append-version="true" />
 </head>
 
 <body>
