--- a/Areas/Admin/Views/Laptops/Create.cshtml
+++ b/Areas/Admin/Views/Laptops/Create.cshtml
@@ -10,6 +10,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        @if (ViewBag.SuccessMessage != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                @ViewBag.SuccessMessage
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
