--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -75,6 +75,7 @@ body {
 }
 .header-container {
   display: flex;
+  margin-top: 10px;
   justify-content: space-between; /* Canh đều 2 bên */
   align-items: center; /* Căn giữa theo trục dọc */
   border-bottom: 1px solid #ccc; /* Tùy chỉnh viền nếu cần */
@@ -83,8 +84,15 @@ body {
 .header-container h1 {
   margin: 0; /* Loại bỏ khoảng cách mặc định */
   font-size: 1.5rem; /* Tùy chỉnh kích thước */
+  user-select: none; /* Ngăn chọn văn bản */
+  -webkit-user-select: none; /* Hỗ trợ trình duyệt WebKit */
+  -ms-user-select: none; /* Hỗ trợ trình duyệt IE */
 }
-
+.container h1 {
+  user-select: none; /* Ngăn chọn văn bản */
+  -webkit-user-select: none; /* Hỗ trợ trình duyệt WebKit */
+  -ms-user-select: none; /* Hỗ trợ trình duyệt IE */
+}
 .search-form {
   display: flex;
   align-items: center; /* Căn giữa các phần tử trong form */
@@ -405,7 +413,7 @@ body {
 
 /* Product Card */
 .hot-new-card {
-  background: #f1c40f;
+  background: #ecf0f1;
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
